build with java 17